--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next-pwa": "^5.4.0",
     "next-seo": "^4.28.1",
     "next-translate": "^1.4.0",
+    "nprogress": "^0.2.0",
     "rc-drawer": "^4.4.2",
     "react": "17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
@@ -61,6 +62,7 @@
     "swiper": "^8.0.3"
   },
   "devDependencies": {
+    "@svgr/webpack": "^7.0.0",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.1",
     "autoprefixer": "10.4.5",
