--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,8 +6,8 @@
   "scope": "/",
   "start_url": "/",
   "id": "/",
-  "short_name": "KachaBazar - Store",
-  "name": "KachaBazar - React Grocery & Organic Food Store e-commerce Template",
+  "short_name": "Karas Ecommerece",
+  "name": "Karas - React Grocery & Organic Food Store e-commerce Template",
   "description": "React Grocery & Organic Food Store e-commerce Template",
   "icons": [
     {
