--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,8 +7,8 @@
   "start_url": "/",
   "id": "/",
   "short_name": "Karas Ecommerece",
-  "name": "Karas - Modern Application  Store e-commerce Template",
-  "description": "Modern Application  Store e-commerce Template",
+  "name": "Karas - Grocecy  Store e-commerce Template",
+  "description": "Grocecy  Store e-commerce Template",
   "icons": [
     {
       "src": "/icon-192x192.png",
