--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "karas-atomic",
   "version": "0.1.0",
   "description": "this is karas-atomic built with next.js and tailwindcss",
-  "homepage": "https://kachabazar-store.vercel.app/",
+  "homepage": "https://karas-user-atomic-shop.vercel.app/",
   "private": true,
   "scripts": {
     "dev": "next dev",
