--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,23 +11,23 @@
   "description": "Grocecy  Store e-commerce Template",
   "icons": [
     {
-      "src": "/icon-192x192.png",
+      "src": "/assets/icon/logo/logo.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "/icon-256x256.png",
+      "src": "/assets/icon/logo/logo.png",
       "sizes": "256x256",
       "type": "image/png"
     },
     {
-      "src": "/icon-384x384.png",
+      "src": "/assets/icon/logo/logo.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "/assets/icon/logo/logo.png",
       "sizes": "512x512",
       "type": "image/png"
     }
